--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.2.10
+attrs==19.3.0
 Django==3.0.8
 django-filter==2.3.0
 djangorestframework==3.11.0
 importlib-metadata==1.7.0
+jsonschema==3.2.0
 Markdown==3.2.2
+pyrsistent==0.16.0
 pytz==2020.1
+six==1.15.0
 sqlparse==0.3.1
 zipp==3.1.0
